--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                             <h2 class="mt-2">Contact For Any Query</h2>
                         </div>
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
-                            <form>
+                            <form method="POST" data-netlify="true">
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
