--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
                             <img class="img-fluid" src="img/hero.png" alt="">
+                            <img src="/img/light-bulb.webp" alt="" class="light-class">
                         </div>
                     </div>
                 </div>
