Landing Page content & 1st image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="about.html" class="nav-item nav-link">Q Customers</a>
                         <a href="service.html" class="nav-item nav-link">Q Council</a>
                         <a href="project.html" class="nav-item nav-link">Q Partners</a>
-                        <a href="contact.html" class="nav-item nav-link">Q Founders</a>
+                        <a href="about.html" class="nav-item nav-link">About Us</a><!--Q Founders-->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Contact Us</a>
                             <div class="dropdown-menu m-0">
@@ -84,7 +84,7 @@
                             <a href="" class="btn btn-outline-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
-                            <img class="img-fluid" src="img/hero.png" alt="">
+                            <img class="img-fluid" src="img/newsletter.png" alt="">
                             <img src="/img/light-bulb.webp" alt="" class="light-class">
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                             <h6 class="position-relative text-primary ps-4">About Us</h6>
                             <h2 class="mt-2">The best Startup accelerator with 2+ years of experience</h2>
                         </div>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet</p>
+                        <p class="mb-4">Our Customers are all  technology startups, MSME startups, startups founded by professionals and startups founded by academia in India.</p>
                         <div class="row g-3">
                             <div class="col-sm-6">
                                 <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>Scale-Up</h6>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="d-flex align-items-center mt-4">
-                            <a class="btn btn-primary rounded-pill px-4 me-3" href="">Read More</a>
+                            <a class="btn btn-primary rounded-pill px-4 me-3" href="about.html">Read More</a>
                             <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-instagram"></i></a>
