Update the card paragraph.

--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                             </div>
                             <h5 class="mb-3">SEO Optimization</h5>
                             <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+				<p class="card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES. The 
+				 acceleration services includes Disruptive Busimess Design and Techniques interactive Modules and fund Raising Programmes to "SPEED UP AND 
+					SCALE-UP STARTUPS FROM ZERO TO HUNDRED IN THE SHORTEST POSSIBLE TIME"</p>
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                         </div>
                     </div>
