--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">SEO Optimization</h5>
-			    <p class="card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES ...
+			    <p class="card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES.
+				    The Acceleration Services includes ...
 			    </p>
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                         </div>
