--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Web Design</h5>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="card-paragraph">Q startups provides the DISRUPTIVE ACCELERATION SERVICES which are run and delivered through the Q portal, portal 
+				    includes mentor modules and funding modules  ...
+			    </p>------------------------
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                         </div>
                     </div>
@@ -207,7 +209,9 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Social Media Marketing</h5>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES.
+				    The Acceleration Services includes ...
+			    </p>---------------------
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                         </div>
                     </div>
@@ -217,7 +221,9 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Email Marketing</h5>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES.
+				    The Acceleration Services includes ...
+			    </p>--------------------
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                         </div>
                     </div>
@@ -227,7 +233,9 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">PPC Advertising</h5>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES.
+				    The Acceleration Services includes ...
+			    </p>----------------------
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                         </div>
                     </div>
@@ -237,7 +245,9 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">App Development</h5>
-                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES.
+				    The Acceleration Services includes ...
+			    </p>--------------------
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                         </div>
                     </div>
