Update service card.
Added paragraph content to the cards and updated their class names.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">SEO Optimization</h5>
-			    <p class="card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES.
+			    <p class="service-card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES.
 				    The Acceleration Services includes ...
 			    </p>
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
@@ -197,7 +197,7 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Web Design</h5>
-                            <p class="card-paragraph">Q startups provides the DISRUPTIVE ACCELERATION SERVICES which are run and delivered through the Q portal, portal 
+                            <p class="service-card-paragraph">Q startups provides the DISRUPTIVE ACCELERATION SERVICES which are run and delivered through the Q portal, portal 
 				    includes mentor modules and funding modules  ...
 			    </p>
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
@@ -209,7 +209,7 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Social Media Marketing</h5>
-                            <p class="card-paragraph">Q STARTUP IS LIKE THE UBER OF TRANSPORTATION INDUSTRY OR THE AIRBNB OF THE TRAVEL INDUSTRY. it "Q PORTAL" connects 
+                            <p class="service-card-paragraph">Q STARTUP IS LIKE THE UBER OF TRANSPORTATION INDUSTRY OR THE AIRBNB OF THE TRAVEL INDUSTRY. it "Q PORTAL" connects 
 				    thousands of global startups who needs accelartion services...
 			    </p>
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
@@ -221,7 +221,7 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Email Marketing</h5>
-                            <p class="card-paragraph">Q starup offers ACCElERATION SERVICES to the startups in their Early stage and growth stage. we are for those who
+                            <p class="service-card-paragraph">Q starup offers ACCElERATION SERVICES to the startups in their Early stage and growth stage. we are for those who
 				    needs speed up and scaleup their startup  ...
 			    </p>
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
@@ -233,7 +233,7 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">PPC Advertising</h5>
-                            <p class="card-paragraph">Q startup also provide the service with Global Council members, founders, Subject matter experts and management experts 
+                            <p class="service-card-paragraph">Q startup also provide the service with Global Council members, founders, Subject matter experts and management experts 
 				    who delivers the Accleration services  ...
 			    </p>
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
@@ -245,7 +245,7 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             <h5 class="mb-3">App Development</h5>
-                            <p class="card-paragraph"> Q startup works with young startups, who needs acceleration and is in the business of offering ACCLERATION 
+                            <p class="service-card-paragraph"> Q startup works with young startups, who needs acceleration and is in the business of offering ACCLERATION 
 				    SERVICES AND TRANSFORMATION OF THIER BUSINESS...
 			    </p>
                             <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
