--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SEO Master - SEO Agency Website Template</title>
+    <title>Q Startups Pvt Ltd</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -484,8 +484,10 @@
                         <a class="btn btn-link" href="">Terms & Condition</a>
                         <a class="btn btn-link" href="">Career</a>
                     </div>
-                    <div class="col-md-6 col-lg-3">
-                        <h5 class="text-white mb-4">Project Gallery</h5>
+                    <!--
+
+                        <div class="col-md-6 col-lg-3">
+                            <h5 class="text-white mb-4">Project Gallery</h5>
                         <div class="row g-2">
                             <div class="col-4">
                                 <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
@@ -507,6 +509,7 @@
                             </div>
                         </div>
                     </div>
+                    -->
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Visit Our Office</h5>
                         <div class="position-relative w-100 mt-3">
