--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			    <p class="service-card-paragraph">Q startups is a Startup accelerator offering the most specialised DISRUPTIVE ACCELERATION SERVICES.
 				    The Acceleration Services includes ...
 			    </p>
-                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            <a class="btn px-3 mt-auto mx-auto" href=""> <!--Read More--></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
