--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SEO Master - SEO Agency Website Template</title>
+    <title>Q Startups Pvt Ltd</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -46,31 +46,37 @@
         <!-- Navbar & Hero Start -->
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
-                    <h1 class="m-0"><i class="fa fa-search me-2"></i>SEO<span class="fs-5">Master</span></h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                <a href="index.html" class="navbar-brand p-0">
+                    <img src="/img/Q-removebg-preview.png" alt="Logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
-                        <a href="project.html" class="nav-item nav-link active">Project</a>
+                        <a href="index.html" class="nav-item nav-link">Q Startup</a>
+                        <a href="about.html" class="nav-item nav-link">Q Portal</a>
+                        <a href="about.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="service.html" class="nav-item nav-link">Q Council</a>
+                        <a href="project.html" class="nav-item nav-link active">Q Partners</a>
+                        <a href="about.html" class="nav-item nav-link">About Us</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Contact Us</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a href="team.html" class="dropdown-item">Book a Meeting</a>
+                                <a href="contact.html" class="dropdown-item">Send a Message</a>
+                                <!--<a href="404.html" class="dropdown-item">404 Page</a>-->
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <!--
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        -->
                     </div>
-                    <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Pro Version</a>
+                    <!--
+
+                        <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
+                    -->
+                    <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
                 </div>
             </nav>
 
@@ -78,12 +84,14 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-12 text-center">
-                            <h1 class="text-white animated zoomIn">Project</h1>
+                            <h1 class="text-white animated zoomIn">Our Partners</h1>
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
+                                    <!--
+                                        <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
+                                    -->
                                     <li class="breadcrumb-item text-white active" aria-current="page">Project</li>
                                 </ol>
                             </nav>
@@ -113,20 +121,68 @@
         </div>
         <!-- Full Screen Search End -->
 
+        <div class="container-xxl py-5">
+            <div class="container px-lg-5">
+                <div class="row g-5">
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="section-title position-relative mb-4 pb-2">
+                            <h6 class="position-relative text-primary ps-4">Q Partners</h6>
+                            <h2 class="mt-2">Q Stratup Partnership Programme for Startups Acceleration</h2>
+                        </div>
+                        <p class="mb-4">
+                            <p class="section-title position-relative mb-4 pb-2">
+                                Q Partners  comprise  Corporate Organisations, Industry Associations, Professional Associations &  Government Bodies. Q STARTUPS PARTNERS WITH SUCH  ORGANIZATION, ASSOCIATION AND BODIES under the “Q STARTUPS  PARTNERSHIP PROGRAMME FOR STARTUPS ACCELERATION“.
+                            </p>
+                            Q PARTNERS HELP PROMOTE ACCELERATION OF STARTUPS BY ORGANISING SEVERAL “EDUCATION  SEMINARS AND WORKSHOPS”,
+                            <br>
+                            <b>
+                                BENEFITS AND ADVANTAGES OF ACCELERATION
+                            </b>
+                        </p>
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>Scale-Up</h6>
+                                <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Professional Staff</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>Founded 3+ Startups</h6>
+                                <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Disruptive Acceleration</h6>
+                            </div>
+                        </div>
+                        <!--
+
+                            <div class="d-flex align-items-center mt-4">
+                                <a class="btn btn-primary rounded-pill px-4 me-3" href="about.html">Read More</a>
+                                <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        -->
+                    </div>
+                    <div class="col-lg-6">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/Partners.gif">
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Portfolio Start -->
         <div class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="position-relative d-inline text-primary ps-4">Our Projects</h6>
-                    <h2 class="mt-2">Recently Launched Projects</h2>
+                    <h6 class="position-relative d-inline text-primary ps-4">Our Partners</h6>
+                    <h2 class="mt-2">Our Honourable Partners</h2>
                 </div>
                 <div class="row mt-n2 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="col-12 text-center">
                         <ul class="list-inline mb-5" id="portfolio-flters">
                             <li class="btn px-3 pe-4 active" data-filter="*">All</li>
-                            <li class="btn px-3 pe-4" data-filter=".first">Design</li>
-                            <li class="btn px-3 pe-4" data-filter=".second">Development</li>
+                            <!--
+
+                                <li class="btn px-3 pe-4" data-filter=".first">Design</li>
+                                <li class="btn px-3 pe-4" data-filter=".second">Development</li>
+                            -->
                         </ul>
                     </div>
                 </div>
@@ -234,9 +290,11 @@
                         <a class="btn btn-link" href="">Terms & Condition</a>
                         <a class="btn btn-link" href="">Career</a>
                     </div>
-                    <div class="col-md-6 col-lg-3">
-                        <h5 class="text-white mb-4">Project Gallery</h5>
-                        <div class="row g-2">
+                    <!--
+
+                        <div class="col-md-6 col-lg-3">
+                            <h5 class="text-white mb-4">Project Gallery</h5>
+                            <div class="row g-2">
                             <div class="col-4">
                                 <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
                             </div>
@@ -257,12 +315,11 @@
                             </div>
                         </div>
                     </div>
+                -->
                     <div class="col-md-6 col-lg-3">
-                        <h5 class="text-white mb-4">Newsletter</h5>
-                        <p>Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulpu</p>
+                        <h5 class="text-white mb-4">Visit our Office</h5>
                         <div class="position-relative w-100 mt-3">
-                            <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Your Email" style="height: 48px;">
-                            <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15274148.782897316!2d73.72344428216331!3d20.830081875254916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1678096805555!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
                         </div>
                     </div>
                 </div>
