added counter at footer

--- a/contact.html
+++ b/contact.html
@@ -192,16 +192,16 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Popular Link</h5>
-                        <a class="btn btn-link" href="">About Us</a>
+                        <a class="btn btn-link" href="https://msme.gov.in/">MSME</a>
                         <a class="btn btn-link" href="">Contact Us</a>
                         <a class="btn btn-link" href="">Privacy Policy</a>
                         <a class="btn btn-link" href="">Terms & Condition</a>
                         <a class="btn btn-link" href="">Career</a>
                     </div>
-                    <!--
-
-                        <div class="col-md-6 col-lg-3">
-                            <h5 class="text-white mb-4">Project Gallery</h5>
+                    
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Visitors</h5>
+                        <!--
                         <div class="row g-2">
                             <div class="col-4">
                                 <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
@@ -222,8 +222,9 @@
                                 <img class="img-fluid" src="img/portfolio-6.jpg" alt="Image">
                             </div>
                         </div>
+                    -->
+                    <a href="https://info.flagcounter.com/lzyD"><img src="https://s01.flagcounter.com/count/lzyD/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
                     </div>
-                -->
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Visit our Office</h5>
                         <div class="position-relative w-100 mt-3">
@@ -243,10 +244,13 @@
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
+                                <a href="index.html">Home</a>
+                                <!--
+
+                                    <a href="">Cookies</a>
+                                    <a href="">Help</a>
+                                    <a href="">FQAs</a>
+                                -->
                             </div>
                         </div>
                     </div>
