--- a/index.html
+++ b/index.html
@@ -249,15 +249,18 @@
         <div class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="position-relative d-inline text-primary ps-4">Our Projects</h6>
-                    <h2 class="mt-2">Recently Launched Projects</h2>
+                    <h6 class="position-relative d-inline text-primary ps-4">Q Partners</h6>
+                    <h2 class="mt-2">Our Honourable Partners</h2>
                 </div>
                 <div class="row mt-n2 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="col-12 text-center">
                         <ul class="list-inline mb-5" id="portfolio-flters">
                             <li class="btn px-3 pe-4 active" data-filter="*">All</li>
-                            <li class="btn px-3 pe-4" data-filter=".first">Design</li>
-                            <li class="btn px-3 pe-4" data-filter=".second">Development</li>
+                            <!--
+
+                                <li class="btn px-3 pe-4" data-filter=".first">Design</li>
+                                <li class="btn px-3 pe-4" data-filter=".second">Development</li>
+                            -->
                         </ul>
                     </div>
                 </div>
@@ -478,16 +481,16 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Popular Link</h5>
-                        <a class="btn btn-link" href="">About Us</a>
+                        <a class="btn btn-link" href="https://msme.gov.in/">MSME</a>
                         <a class="btn btn-link" href="">Contact Us</a>
                         <a class="btn btn-link" href="">Privacy Policy</a>
                         <a class="btn btn-link" href="">Terms & Condition</a>
                         <a class="btn btn-link" href="">Career</a>
                     </div>
-                    <!--
-
-                        <div class="col-md-6 col-lg-3">
-                            <h5 class="text-white mb-4">Project Gallery</h5>
+                    
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Visitors</h5>
+                        <!--
                         <div class="row g-2">
                             <div class="col-4">
                                 <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
@@ -508,8 +511,9 @@
                                 <img class="img-fluid" src="img/portfolio-6.jpg" alt="Image">
                             </div>
                         </div>
-                    </div>
                     -->
+                    <a href="https://info.flagcounter.com/lzyD"><img src="https://s01.flagcounter.com/count/lzyD/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+                    </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Visit Our Office</h5>
                         <div class="position-relative w-100 mt-3">
@@ -529,10 +533,13 @@
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
+                                <a href="index.html">Home</a>
+                                <!--
+
+                                    <a href="">Cookies</a>
+                                    <a href="">Help</a>
+                                    <a href="">FQAs</a>
+                                -->
                             </div>
                         </div>
                     </div>
