Editted footer & Q council page

--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="section-title position-relative mb-4 pb-2">
                             <h6 class="position-relative text-primary ps-4">Q STARTUPS PVT LTD</h6>
-                            <h2 class="mt-2">Pragya Jhunjhunwala</h2>
+                            <h2 class="mt-2">CS Pragya Jhunjhunwala</h2>
                             <p class="mb-4">Director</p>
                         </div>
                         <p class="mb-4">I belong to the new era of startup and internet economy, and still hold the wisdom of industrial economy. Grateful to my parents, and in laws, who have always fuelled my abilities and passion.</p>
@@ -315,10 +315,13 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All Right Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+							<br>
+                            <div class="hider" style="color: #454593;">
+                                Designed By <a style="color: #49498a;" class="border-bottom-black" href="https://htmlcodex.com">HTML Codex</a>
+                            </div>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
