--- a/project.html
+++ b/project.html
@@ -92,7 +92,7 @@
                                     <!--
                                         <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                                     -->
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Project</li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">Q Partners</li>
                                 </ol>
                             </nav>
                         </div>
