--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-primary hero-header mb-5">
+            <div class="container-xxl py-5 bg-primary hero-header mb-5 circle-animationn triangle-animationn">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-lg-6 text-center text-lg-start">
@@ -86,6 +86,12 @@
                         <div class="col-lg-6 text-center text-lg-start">
                             <img class="img-fluid" src="img/hero.png" alt="">
                             <img src="/img/light-bulb.webp" alt="" class="light-class">
+                        </div>
+                        <div class="circlee">
+                            <img src="/img/circle.png" alt="">
+                        </div>
+                        <div class="trianglee">
+                            <img src="/img/triangle-pic-removebg-preview.png" alt="">
                         </div>
                     </div>
                 </div>
