--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Q Startup</a>
-                        <a href="about.html" class="nav-item nav-link">Q Portal</a>
-                        <a href="about.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="index.html" class="nav-item nav-link ">Q Startup</a>
+                        <a href="login.html" class="nav-item nav-link">Q Portal</a>
+                        <a href="customer.html" class="nav-item nav-link">Q Customers</a>
                         <a href="service.html" class="nav-item nav-link">Q Council</a>
                         <a href="project.html" class="nav-item nav-link">Q Partners</a>
                         <a href="about.html" class="nav-item nav-link active">About Us</a><!--Q Founders-->
