--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Q Startup</a>
-                        <a href="about.html" class="nav-item nav-link">Q Portal</a>
-                        <a href="about.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="login.html" class="nav-item nav-link">Q Portal</a>
+                        <a href="customer.html" class="nav-item nav-link">Q Customers</a>
                         <a href="service.html" class="nav-item nav-link">Q Council</a>
                         <a href="project.html" class="nav-item nav-link">Q Partners</a>
                         <a href="about.html" class="nav-item nav-link">About Us</a><!--Q Founders-->
