--- a/project.html
+++ b/project.html
@@ -54,12 +54,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Q Startup</a>
-                        <a href="about.html" class="nav-item nav-link">Q Portal</a>
-                        <a href="about.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="index.html" class="nav-item nav-link ">Q Startup</a>
+                        <a href="login.html" class="nav-item nav-link">Q Portal</a>
+                        <a href="customer.html" class="nav-item nav-link">Q Customers</a>
                         <a href="service.html" class="nav-item nav-link">Q Council</a>
                         <a href="project.html" class="nav-item nav-link active">Q Partners</a>
-                        <a href="about.html" class="nav-item nav-link">About Us</a>
+                        <a href="about.html" class="nav-item nav-link">About Us</a><!--Q Founders-->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Contact Us</a>
                             <div class="dropdown-menu m-0">
@@ -68,14 +68,8 @@
                                 <!--<a href="404.html" class="dropdown-item">404 Page</a>-->
                             </div>
                         </div>
-                        <!--
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        -->
                     </div>
-                    <!--
-
-                        <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    -->
+                    <!--<butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>-->
                     <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
                 </div>
             </nav>
