--- a/service.html
+++ b/service.html
@@ -54,9 +54,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Q Startup</a>
-                        <a href="about.html" class="nav-item nav-link">Q Portal</a>
-                        <a href="about.html" class="nav-item nav-link">Q Customers</a>
+                        <a href="index.html" class="nav-item nav-link ">Q Startup</a>
+                        <a href="login.html" class="nav-item nav-link">Q Portal</a>
+                        <a href="customer.html" class="nav-item nav-link">Q Customers</a>
                         <a href="service.html" class="nav-item nav-link active">Q Council</a>
                         <a href="project.html" class="nav-item nav-link">Q Partners</a>
                         <a href="about.html" class="nav-item nav-link">About Us</a><!--Q Founders-->
@@ -69,10 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--
-                        <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
-                    -->
-
+                    <!--<butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>-->
                     <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-secondary text-light rounded-pill py-2 px-4 ms-3">Register Startup</a>
                 </div>
             </nav>
