--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="dropdown-menu m-0">
                                 <a href="team.html" class="dropdown-item">Book a Meeting</a>
                                 <a href="contact.html" class="dropdown-item">Send a Message</a>
-                                <!--<a href="404.html" class="dropdown-item">404 Page</a>-->
+                                <!--<a href="404.html" class="dropdown-item">404 Page</a>----->
                             </div>
                         </div>
                     </div>
