--- a/customer.html
+++ b/customer.html
@@ -46,7 +46,7 @@
         <!-- Navbar & Hero Start -->
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a href="index.html" class="navbar-brand p-0">
                     <img src="/img/Q-removebg-preview.png" alt="Logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -78,7 +78,7 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-12 text-center">
-                            <h1 class="text-white animated zoomIn">Q Council</h1>
+                            <h1 class="text-white animated zoomIn">Q Customers</h1>
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
@@ -87,7 +87,7 @@
 
                                         <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                                     -->
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Q Council</li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">Q Customers</li>
                                 </ol>
                             </nav>
                         </div>
@@ -122,27 +122,30 @@
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="section-title position-relative mb-4 pb-2">
-                            <h6 class="position-relative text-primary ps-4">Q Council</h6>
-                            <h2 class="mt-2">Q Council is a group of specialists who mentor startups for their disruptive acceleration</h2>
+                            <h6 class="position-relative text-primary ps-4">Q Customers</h6>
+                            <h2 class="mt-2">Who are Q Customers</h2>
                         </div>
-                        <p class="mb-4">Q Council Members comprise  Internet Gurus,  Disruptive Founders, PE and VC Managers, Fund Managers,  Subject Matter Experts, Industry Experts, Scientists and Academia from all over the world.</p>
+                        <p class="mb-4">Our Customers are all  TECHNOLOGY STARTUPS, MSME STARTUPS, STARTUPS FOUNDED BY PROFESSIONALS AND STARTUPS FOUNDED BY ACADEMIA in India. Each startup as mentioned above should be in the age group of  1-3 years and the Startup should typically be in the Seed or Growth Stage. </p>
                         <div class="row g-3">
                             <div class="col-sm-6">
-                                <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>Scale-Up</h6>
-                                <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Professional Staff</h6>
+                                <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>6,00,000 MSME Startups</h6>
+                                <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Huge Market Potential</h6>
                             </div>
                             <div class="col-sm-6">
                                 <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>24/7 Support</h6>
                                 <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Disruptive Acceleration</h6>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center mt-4">
-                            <a class="btn btn-primary rounded-pill px-4 me-3" href="about.html">Read More</a>
-                            <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+                        <!--
+
+                            <div class="d-flex align-items-center mt-4">
+                                <a class="btn btn-primary rounded-pill px-4 me-3" href="about.html">Read More</a>
+                                <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-outline-primary btn-square me-3" href=""><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        -->
                     </div>
                     <div class="col-lg-6">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/output-onlinegiftools.gif">
@@ -156,8 +159,8 @@
         <div class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="position-relative d-inline text-primary ps-4">Q Council</h6>
-                    <h2 class="mt-2">Q Council members</h2>
+                    <h6 class="position-relative d-inline text-primary ps-4">Q Customer</h6>
+                    <h2 class="mt-2">Our Customers</h2>
                 </div>
                 <div class="row g-4 justify-content-center">
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
@@ -167,9 +170,9 @@
                                 <i class="fa fa-home fa-2x"></i>
                             </div>
                             -->
-                                <h5 class="mb-3">Mr. Vibhor Tandon </h5>
-                                <p> (Regional Head MCX)</p>
-                            <p>Currently He has been heading Eastern Region for the Commodities Exchange for 15  years. An Exchange Expert  in the functioning of the various exchanges in the world. Assistant Treasurer & Executive Committee Member ,Calcutta Management  Association.</p>
+                                <h5 class="mb-3">MOBILIA HEALTHY HOMES PVT LTD</h5>
+                                <p> 2022 </p>
+                            <p>is  the World’s First FMCG and “Off the Shelf “, products  and are being  sold like  Clothes, Televisions and Cars through Stores! Mobilia gets  fitted in your bare and empty homes instantly allowing you to start living in it immediately</p>
                             <!--
                                 <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                             -->
@@ -182,9 +185,10 @@
                                     <i class="fa fa-home fa-2x"></i>
                                 </div>
                             -->
-                            <h5 class="mb-3">Dr CS Mrs. Mamta Binani</h5>
-                            <p>(14th Rank in ICSI-1996)</p>
-                            <p>She is the National Past President of ICSI for the year 2016. She relinquished the office of President on 19th January, 2017. Awards & Business E-Summit In 2021 at Emirates Ballroom, Marriott Marquis Hotel, Dubai.</p>
+                            <h5 class="mb-3">Magical Mantras Private Limited</h5>
+                            <p> 2021 </p>
+                            <p>It is classified as Non-govt company and is registered at Registrar of Companies, Kolkata. The Company's status is Active. It's a company limited by shares having an authorized capital of Rs 50.00 Lakh and a paid-up capital of Rs 0.02 Lakh as per MCA.
+                            </p>
                             <!--
                                 <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                             -->
