--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
 
         <!-- Navbar & Hero Start -->
-        <div class="container-xxl position-relative p-0">
+        <div class="container-xxl position-relative p-0 circleee-animation triangleee-animation">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
                     <h1 class="m-0"><i class="fa fa-search me-2"></i>SEO<span class="fs-5">Master</span></h1>
@@ -91,6 +91,14 @@
                     </div>
                 </div>
             </div>
+
+            <div class="circleee">
+                <img src="/img/circle.png" alt="">
+            </div>
+            <div class="triangleee">
+                <img src="/img/triangle-pic-removebg-preview.png" alt="">
+            </div>
+        
         </div>
         <!-- Navbar & Hero End -->
 
@@ -152,7 +160,7 @@
 
 
         <!-- Newsletter Start -->
-        <div class="container-xxl bg-primary newsletter my-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container-xxl bg-primary newsletter my-5 wow fadeInUp triangle-animation circle-animation" data-wow-delay="0.1s">
             <div class="container px-lg-5">
                 <div class="row align-items-center" style="height: 250px;">
                     <div class="col-12 col-md-6">
@@ -167,6 +175,12 @@
                         <img class="img-fluid mt-5" style="height: 250px;" src="img/newsletter.png">
                     </div>
                 </div>
+            </div>
+            <div class="circle">
+                <img src="/img/circle.png" alt="">
+            </div>
+            <div class="triangle">
+                <img src="/img/triangle-pic-removebg-preview.png" alt="">
             </div>
         </div>
         <!-- Newsletter End -->
@@ -238,7 +252,7 @@
         
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn triangle-animation circle-animation" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
@@ -314,6 +328,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="circle">
+                <img src="/img/circle.png" alt="">
+            </div>
+            <div class="triangle">
+                <img src="/img/triangle-pic-removebg-preview.png" alt="">
             </div>
         </div>
         <!-- Footer End -->
