--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
 
         <!-- Testimonial Start -->
-        <div class="container-xxl bg-primary testimonial py-5 my-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container-xxl bg-primary testimonial py-5 my-5 wow fadeInUp circle-animation" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="owl-carousel testimonial-carousel">
                     <div class="testimonial-item bg-transparent border rounded text-white p-4">
@@ -401,6 +401,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="circle">
+                <img src="/img/circle.png" alt="">
+            </div>
+            <div class="triangle">
+                <img src="/img/triangle-pic-removebg-preview.png" alt="">
             </div>
         </div>
         <!-- Testimonial End -->
@@ -472,7 +479,7 @@
         
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn circle-animationn triangle-animationn" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
@@ -548,6 +555,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="circle">
+                <img src="/img/circle.png" alt="">
+            </div>
+            <div class="triangle">
+                <img src="/img/triangle-pic-removebg-preview.png" alt="">
             </div>
         </div>
         <!-- Footer End -->
